2006-01-24 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.Projects/ProjectCreateInformation.cs: Added CombineName
	property, since it may be different from the project name.

2006-01-18 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.Projects/DotNetProjectBinding.cs:
	* MonoDevelop.Projects/ProjectService.cs:
	* MonoDevelop.Projects/IProjectService.cs:
	* MonoDevelop.Projects/IProjectBinding.cs: Added
	CanCreateSingleFileProject() method to all those
	classes. It checks if a single file project can be created
	from a given file.

2006-01-14 Andrés G. Aragoneses  <knocte@gmail.com>

	* MonoDevelop.Projects/MdsFileFormat.cs: Replaced 'Combine' by
	'Solution'.
	* MonoDevelop.Projects/CmbxFileFormat.cs: Replaced 'Combine' by
	'Solution'.

2006-01-13 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.Projects.Parser/AssemblyCodeCompletionDatabase.cs:
	Properly handle errors found when parsing an assembly. When there
	is an error, make sure the assembly is reparsed the next time MD starts.
	* MonoDevelop.Projects.Parser/FileEntry.cs: Added DisableParse
	property.
	* MonoDevelop.Projects.Parser/CodeCompletionDatabase.cs: In Write(),
	close the file in case of error. Also flush the binary writer
	before writing the index offset.

2006-01-10 Mart Roosmaa  <roosmaa@gmail.com>

	* MonoDevelop.Projects/Combine.cs: Updated an using statement.

2006-01-10 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.Projects.Text/TextFile.cs: Added Modified property.
	* MonoDevelop.Projects.CodeGeneration/RefactorerContext.cs: Don't
	save files that have not been modified.
	* MonoDevelop.Projects.CodeGeneration/IRefactorer.cs:
	In MemberReferenceCollection, properly sort the references
	before renaming, to make sure that position values are
	always correct. Added file and column to MemberReference.
	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs:
	Class scope is actualy File scope.
	* MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs: